--- a/z_Extra/ttrpg-convert/config.json
+++ b/z_Extra/ttrpg-convert/config.json
@@ -49,9 +49,12 @@
             "z_Extra/ttrpg-convert/homebrew/Jasmine Yang; Hamund's Harvesting Handbook III.json",
             "z_Extra/ttrpg-convert/homebrew/Jasmine Yang; Hamund's Herbalism Handbook.json",
             "z_Extra/ttrpg-convert/homebrew/MCDM Productions; Strongholds and Followers.json",
-            "z_Extra/ttrpg-convert/homebrew/MCDM Productions; Flee, Mortals! Packet 1.json",
-            "z_Extra/ttrpg-convert/homebrew/griff-mac; The Griffon's Saddlebag.json",
-            "z_Extra/ttrpg-convert/homebrew/Kobold Press; Deep Magic.json"
+            "z_Extra/ttrpg-convert/homebrew/Kobold Press; Deep Magic.json",
+            "z_Extra/ttrpg-convert/homebrew/Griffin Macaulay; The Griffon's Saddlebag, Book 1.json",
+            "z_Extra/ttrpg-convert/homebrew/Griffin Macaulay; The Griffon's Saddlebag, Book 2.json",
+            "z_Extra/ttrpg-convert/homebrew/Griffin Macaulay; The Griffon's Saddlebag, Book 3.json",
+            "z_Extra/ttrpg-convert/homebrew/Griffin Macaulay; The Griffon's Saddlebag, Book 4.json",
+            "z_Extra/ttrpg-convert/homebrew/Justice Arman; Devil's Advocate A Guide to Infernal Contracts.json"
         ],
         "adventure": [
             "CoS",
