--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "markov-chains": "^1.0.2"
+    "markov-chains": "^1.0.2",
+    "readline-sync": "^1.4.10"
   }
 }
