--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "axios": "^1.7.9",
     "gray-matter": "^4.0.3",
     "markov-chains": "^1.0.2",
     "node-cache": "^5.1.2",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "sync-fetch": "^0.6.0-2"
   }
 }
